gatekeeper/templates/k8sdisallowhostnetwork.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowhostnetwork
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowHostNetwork
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sdisallowhostnetwork

      violation[{"msg": "hostNetwork: true is not allowed"}] {
        input.review.object.spec.hostNetwork == true
      }
