gatekeeper/templates/k8sdisallowlatesttag.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowlatesttag
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowLatestTag
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sdisallowlatesttag

      containers[c] {
        c := input.review.object.spec.containers[_]
      }

      containers[c] {
        c := input.review.object.spec.initContainers[_]
      }

      violation[{"msg": msg}] {
        c := containers[_]
        endswith(c.image, ":latest")
        msg := sprintf("container %q uses forbidden image tag :latest", [c.name])
      }

      violation[{"msg": msg}] {
        c := containers[_]
        not contains(c.image, ":")
        msg := sprintf("container %q must use an explicit immutable image tag", [c.name])
      }
