gatekeeper/templates/k8sdisallowrootuser.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowrootuser
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowRootUser
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sdisallowrootuser

      containers[c] {
        c := input.review.object.spec.containers[_]
      }

      containers[c] {
        c := input.review.object.spec.initContainers[_]
      }

      violation[{"msg": "pod securityContext.runAsUser must not be 0"}] {
        input.review.object.spec.securityContext.runAsUser == 0
      }

      violation[{"msg": msg}] {
        c := containers[_]
        c.securityContext.runAsUser == 0
        msg := sprintf("container %q securityContext.runAsUser must not be 0", [c.name])
      }
