gatekeeper/templates/k8srequiredcontainerlimits.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredcontainerlimits
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredContainerLimits
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8srequiredcontainerlimits

      containers[c] {
        c := input.review.object.spec.containers[_]
      }

      containers[c] {
        c := input.review.object.spec.initContainers[_]
      }

      violation[{"msg": msg}] {
        c := containers[_]
        not c.resources.limits.cpu
        msg := sprintf("container %q must set resources.limits.cpu", [c.name])
      }

      violation[{"msg": msg}] {
        c := containers[_]
        not c.resources.limits.memory
        msg := sprintf("container %q must set resources.limits.memory", [c.name])
      }
